<resources>
    <string name="app_name" translatable="false">AppNASAPI</string>
    <string name="nasa_photo_of_the_day">NASA Photo of the Day</string>
    <string name="search_wiki">Wiki Search</string>
    <string name="wiki_helper_text">Let\'s look up the term in Wikipedia!</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_theme">Default Theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="ufo_theme">UFO Theme</string>
    <string name="selected_theme">Selected theme:</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="utils">Utils</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>