<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/theme_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selected_theme"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radio_group_theme"
        style="@style/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_setting_title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobutton_def_theme"
            style="@style/radiobutton"
            android:text="@string/default_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobutton_red_theme"
            style="@style/radiobutton"
            android:text="@string/mars_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radiobutton_green_theme"
            style="@style/radiobutton"
            android:text="@string/ufo_theme" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

